devops/argocd/fission.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fission
