devops/argocd/nvidia.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nvidia-device-plugin
  labels:
    pod-security.kubernetes.io/enforce: privileged
