devops/argocd/ray.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ray-operator
